<resources>
    <plurals name="track_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d трек</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минута</item>
    </plurals>

    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="share_app_link" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="support">Написать в поддержку</string>
    <string name="support_subject">Сообщение разработчикам приложения Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам за крутое приложение!</string>
    <string name="support_email" translatable="false">ashot.m1985@gmail.com</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="user_agreement_link" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="connection_problems">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="recent_searches">Вы искали</string>
    <string name="clear_recent">Очистить историю</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="time">Длительность</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_library">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="title">Название*</string>
    <string name="description">Описание</string>
    <string name="make">Создать</string>
    <string name="playlist_made">Плейлист \"%1$s\" создан</string>
    <string name="finish_making_question">Завершить создание плейлиста?</string>
    <string name="unsaved_data">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="default_time" translatable="false">0:00</string>
    <string name="track_is_present">Трек уже добавлен в плейлист \"%1$s\"</string>
    <string name="track_added_to_playlist">Добавлено в плейлист \"%1$s\"</string>
    <string name="share">Поделиться</string>
    <string name="empty_playlist">Ваш плейлист пуст</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_track_question">Хотите удалить трек?</string>
    <string name="delete_playlist_question">Хотите удалить плейлист \"%1$s\"?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="nothing_to_send">В этом плейлисте нет списка треков, которым можно поделиться</string>

</resources>