<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/default_padding"
    android:paddingBottom="24dp"
    style="@style/MainActivityTheme">


    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp"
        app:contentInsetStart="0dp"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="@color/white" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="16dp"
        android:text="@string/search"
        app:icon="@drawable/ic_search"
        style="@style/MainActivityButtonStyle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/library_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="16dp"
        android:text="@string/library"
        app:icon="@drawable/ic_library"
        style="@style/MainActivityButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings"
        style="@style/MainActivityButtonStyle"/>

</LinearLayout>