<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/settings_title"
        style="@style/TitleStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:layout_marginBottom="24dp"
        android:text="@string/settings" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/track_height"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/theme_text"
            style="@style/TrackTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/dark_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/theme_switcher"
            style="@style/SwitchStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/default_padding"
            android:foreground="@null" />
    </FrameLayout>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/share_app_button"
        style="@style/TrackTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/track_height"
        android:drawableEnd="@drawable/ic_share_24"
        android:text="@string/share_app" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/support_button"
        style="@style/TrackTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/track_height"
        android:drawableEnd="@drawable/ic_support_24"
        android:text="@string/support" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/user_agreement_button"
        style="@style/TrackTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/track_height"
        android:drawableEnd="@drawable/ic_arrow_forward_24"
        android:text="@string/user_agreement" />

</LinearLayout>

