<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/settings_toolbar"
        android:layout_marginTop="4dp"
        app:contentInsetStartWithNavigation="64dp"
        app:navigationIcon="@drawable/ic_backspace"
        app:title="@string/settings"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_width">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/dark_theme"
                android:textColor="@color/black"
                android:textSize="@dimen/small_textSize" />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="56dp"
                android:layout_height="40dp"
                android:layout_gravity="end|center_vertical"
                android:theme="@style/DarkThemeSwitchTheme">

            </androidx.appcompat.widget.SwitchCompat>


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_width">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/share_app"
                android:textColor="@color/black"
                android:textSize="@dimen/small_textSize" />

            <ImageView
                android:layout_width="@dimen/default_icon_size"
                android:layout_height="@dimen/default_icon_size"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/ic_share" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_width">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/write_to_support"
                android:textColor="@color/black"
                android:textSize="@dimen/small_textSize" />

            <ImageView
                android:layout_width="@dimen/default_icon_size"
                android:layout_height="@dimen/default_icon_size"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/ic_support" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_width">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/user_agreement"
                android:textColor="@color/black"
                android:textSize="@dimen/small_textSize" />

            <ImageView
                android:layout_width="@dimen/default_icon_size"
                android:layout_height="@dimen/default_icon_size"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/ic_arrow_forward" />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>